| Summary: | ASTERISK-30234: res_geolocation: ...may be used uninitialized error in geoloc_config.c | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2022-09-16 08:06:46 | Date Closed: | 2022-09-16 12:58:40 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_geolocation |
| Versions: | 16.29.0 18.15.0 19.7.0 20.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When optimization is on....
{code} res_geolocation/geoloc_config.c: In function 'geoloc_profile_apply_handler': res_geolocation/geoloc_config.c:229:26: error: 'format' may be used uninitialized [-Werror=maybe-uninitialized] 229 | result = validate_location_info(id, format, profile->location_refinement); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors {code} | ||
| Comments: | By: Friendly Automation (friendly-automation) 2022-09-16 12:58:42.098-0500 Change 19265 merged by Friendly Automation: res_geolocation: Fix issues exposed by compiling with -O2 [https://gerrit.asterisk.org/c/asterisk/+/19265|https://gerrit.asterisk.org/c/asterisk/+/19265] By: Friendly Automation (friendly-automation) 2022-09-16 13:46:08.738-0500 Change 19258 merged by Friendly Automation: res_geolocation: Fix issues exposed by compiling with -O2 [https://gerrit.asterisk.org/c/asterisk/+/19258|https://gerrit.asterisk.org/c/asterisk/+/19258] By: Friendly Automation (friendly-automation) 2022-09-16 13:47:20.666-0500 Change 19257 merged by Friendly Automation: res_geolocation: Fix issues exposed by compiling with -O2 [https://gerrit.asterisk.org/c/asterisk/+/19257|https://gerrit.asterisk.org/c/asterisk/+/19257] By: Friendly Automation (friendly-automation) 2022-09-16 14:31:46.040-0500 Change 19266 merged by Friendly Automation: res_geolocation: Fix issues exposed by compiling with -O2 [https://gerrit.asterisk.org/c/asterisk/+/19266|https://gerrit.asterisk.org/c/asterisk/+/19266] By: Friendly Automation (friendly-automation) 2022-09-19 06:19:24.070-0500 Change 19282 merged by George Joseph: res_geolocation: Fix issues exposed by compiling with -O2 [https://gerrit.asterisk.org/c/asterisk/+/19282|https://gerrit.asterisk.org/c/asterisk/+/19282] By: Friendly Automation (friendly-automation) 2022-09-19 06:20:38.246-0500 Change 19259 merged by George Joseph: res_geolocation: Fix issues exposed by compiling with -O2 [https://gerrit.asterisk.org/c/asterisk/+/19259|https://gerrit.asterisk.org/c/asterisk/+/19259] By: Friendly Automation (friendly-automation) 2022-09-19 06:22:51.747-0500 Change 19284 merged by Friendly Automation: res_geolocation: Fix issues exposed by compiling with -O2 [https://gerrit.asterisk.org/c/asterisk/+/19284|https://gerrit.asterisk.org/c/asterisk/+/19284] By: Friendly Automation (friendly-automation) 2022-09-19 06:22:56.043-0500 Change 19283 merged by Friendly Automation: res_geolocation: Fix issues exposed by compiling with -O2 [https://gerrit.asterisk.org/c/asterisk/+/19283|https://gerrit.asterisk.org/c/asterisk/+/19283] By: Friendly Automation (friendly-automation) 2022-09-19 06:22:59.829-0500 Change 19280 merged by Friendly Automation: res_geolocation: Fix issues exposed by compiling with -O2 [https://gerrit.asterisk.org/c/asterisk/+/19280|https://gerrit.asterisk.org/c/asterisk/+/19280] By: Friendly Automation (friendly-automation) 2022-09-19 06:23:05.225-0500 Change 19281 merged by Friendly Automation: res_geolocation: Fix issues exposed by compiling with -O2 [https://gerrit.asterisk.org/c/asterisk/+/19281|https://gerrit.asterisk.org/c/asterisk/+/19281] | ||